kube/deploy/apps/minecraft/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app minecraft
  namespace: *app
spec:
  endpointSelector: {}
  ingressDeny:
    - fromEntities: [all]
      toPorts:
        - ports:
            - port: "25575"
              protocol: ANY
